--- a/herseyime.html
+++ b/herseyime.html
@@ -42,7 +42,7 @@
 <body>
   <h1>💌 Dünya'nın En Güzel Kızı 💌</h1>
   <p>
-    Ben seninle yeniden doğdum.İyi ki varsın Berenimmmm bu kalp her zaman seni sevicek her zaman senin için atıcak ❤️<br>
+    Ben seninle yeniden doğdum.İyi ki varsın Berenimmmm bu kalp her zaman seni sevicek her zaman senin için atıcak.Seniii çoooooooooooookkkkkkk amaaaaaaaa çooooooooooookkkkkk seviiyooruuummmmmmm preeennseeessiiiimmmmm hayatıımıınnn anlamıııı❤️<br>
     ❤️
   </p>
 
@@ -65,4 +65,5 @@
     setInterval(createHeart, 500);
   </script>
 </body>
+
 </html>
